# Kaas

./: .cursorignore  .cursorrules  .eslintrc.json  .gitignore  LICENSE  README.md  README_fr.md  README_zh-Hans.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
docs/: options.md  options_fr.md  options_zh-Hans.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  mod.rs  prelude.rs  tauri.conf.json
src-tauri/async-openai/src/: chat.rs  client.rs
src-tauri/async-openai/src/types/: audio.rs  chat.rs  common.rs  fine_tuning.rs  image.rs  moderation.rs
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/entities/: contents.rs  conversations.rs  messages.rs  mod.rs  model.rs  models.rs  prelude.rs  prompts.rs  settings.rs
src-tauri/icons/: icon.icns
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20240101_000001_create_models.rs  m20240101_000002_create_settings.rs  m20240101_000003_create_conversations.rs  m20240101_000004_create_messages.rs  m20240101_000005_create_prompts.rs  m20240101_000006_create_contents.rs  m20240101_100001_seed_settings.rs  m20240101_100002_seed_prompts.rs  m20240223_143755_create_models.rs  m20240301_024630_create_conversations.rs  m20240301_024644_create_messages.rs  m20240402_095857_seed_settings.rs  m20240427_130803_create_prompts.rs  m20240820_000001_conversations_add_last_message_at.rs  m20240907_000001_conversations_add_sub_conversations.rs  m20250214_000001_messages_add_reasoning_fields.rs
src-tauri/resources/: js-deps.json  rs-deps.json
src-tauri/src/: commands.rs  errors.rs  init.rs  lib.rs  log_utils.rs  main.rs  utils.rs
src-tauri/src/core/: handle.rs
src-tauri/src/services/: api.rs  cache.rs  db.rs  mod.rs
src-tauri/src/services/llm/: chat.rs  client.rs  config.rs  mod.rs  models.rs  types.rs  utils.rs  webservices.rs
src-tauri/src/services/llm/providers/: mod.rs  types.rs
src-tauri/src/services/llm/providers/claude/: chat.rs  config.rs  mod.rs  models.rs
src-tauri/src/services/llm/providers/deepseek/: chat.rs  config.rs  models.rs
src-tauri/src/services/llm/providers/google/: chat.rs  config.rs  mod.rs  models.rs
src-tauri/src/services/llm/providers/ollama/: chat.rs  config.rs  mod.rs  models.rs
src-tauri/src/services/llm/providers/openai/: chat.rs
src-tauri/src/services/llm/providers/openrouter/: chat.rs  config.rs  mod.rs  models.rs
src-tauri/src/services/llm/providers/xai/: chat.rs  config.rs  mod.rs  models.rs
src/components/: AutoFitTextarea.tsx  BotMessageReceiver.tsx  Chat.tsx  ChatMessage.tsx  ChatMessageList.tsx  ChatPromptInput.tsx  ChatSection.tsx  ChatSectionHasModel.tsx  ChatSectionNoModel.tsx  ChatStop.tsx  ConfirmationDialog.tsx  ConversationCreator.tsx  ConversationGrid.tsx  ConversationHistory.tsx  ConversationOptionsDialog.tsx  ConversationStarter.tsx  ConversationTitleBar.tsx  ConversationsHistoryGrid.tsx  CopyCode.tsx  CreateModelFormDialog.tsx  DeleteWithConfirmation.tsx  EditableTitleBar.tsx  Error.tsx  Fallback.tsx  FieldErrorMessage.tsx  GlobalFallback.tsx  GroupChatPromptInput.tsx  ImagePreviewer.tsx  ImageUploader.tsx  InputWithMenu.tsx  Logo.tsx  ModelCreator.tsx  ModelForm.tsx  ModelFormDialog.tsx  ModelGrid.tsx  ModelPicker.tsx  ModelPickerDialog.tsx  ModelTag.tsx  MultiModelPicker.tsx  NewConversationForm.tsx  (+32 more)
src/components/Conversation/: Chat.tsx  ChatSection.tsx  ChatSectionHasModel.tsx  ChatSectionNoModel.tsx  ConversationTitleBar.tsx  GroupChat.tsx  InfoSection.tsx  NoModel.tsx  SingleChat.tsx  UsageCounter.tsx
src/components/Conversations/: ConversationGrid.tsx  NewConversationForm.tsx  NoModel.tsx
src/components/Models/: ModelCreator.tsx  ModelFormDialogContent.tsx  NoModels.tsx  ProvidersGridDialogContent.tsx
src/components/Prompts/: NoPrompts.tsx  PromptCreator.tsx
src/components/animation/: SlideLeftTransition.tsx  SlideUpTransition.tsx
src/components/forms/: AzureOptionsForm.tsx  ModelForm.tsx  OptionsForm.tsx  PromptEditor.tsx  PromptForm.tsx  RemoteModelsSelector.tsx
src/components/placeholders/: GridSkeleton.tsx  WholePage.tsx
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  carousel.tsx  checkbox.tsx  context-menu.tsx  dialog.tsx  form.tsx  input.tsx  (+12 more)
src/i18n/: index.ts
src/layouts/: CommonLayout.tsx  TopMainLayout.tsx  TopNavLayout.tsx  TwoColumns.tsx  TwoRows.tsx
src/lib/: cache.ts  commands.ts  constants.ts  contexts.ts  error.ts  hooks.ts  hooks.tsx  log.ts  logs.ts  prompts.ts  providers.tsx  schemas.ts  store.ts  types.ts  utils.ts  utils.tsx
src/pages/: Conversation.tsx  Conversations.tsx  Debug.tsx  Dependencies.tsx  Home.tsx  Models.tsx  NewConversation.tsx  Prompts.tsx  Settings.tsx  Templates.tsx
src/styles/: fonts.ts
(+35 files in other folders)
