workspace = { members = [".", "entity", "migration"] }
[package]
name = "kaas"
version = "0.1.0"
description = "A Tauri App"
authors = ["Frank Zhang"]
license = "Apache 2.0"
repository = ""
default-run = "kaas"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
# local crates
entity = { path = "entity" }
migration = { path = "migration" }
chrono = "0.4.34"
log = "0.4.20"
once_cell = "1.19.0"
reqwest = { version = "0.12", features = [ "socks"] }
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-chrono", "with-json" ] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ] }
strum = "0.26"
strum_macros = "0.26"
tauri = { version = "1.5.4", features = [ "shell-open", "path-all", "fs-write-file", "fs-remove-dir", "fs-read-dir", "fs-exists", "fs-copy-file", "fs-read-file", "fs-rename-file", "fs-create-dir", "fs-remove-file"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["colored"] }
thiserror = "1.0"
tokio = "1.36.0"
tokio-stream = "0.1.15"
base64 = "0.22.1"
infer = "0.16.0"
sys-locale = "0.3.1"
async-openai = "0.23.4"
sysinfo = "0.30.13"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
