workspace = { members = [".", "entity", "migration"] }
[package]
name = "kaas"
version = "1.0.7"
description = "A LLM client designed to serve multiple providers and platforms."
authors = ["Frank Zhang"]
license = "MIT"
repository = ""
default-run = "kaas"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# local crates
entity = { path = "entity" }
migration = { path = "migration" }
async-openai = { git = "https://github.com/0xfrankz/async-openai.git", branch = "multi-providers-support"}
chrono = "0.4.34"
log = "0.4.20"
once_cell = "1.19.0"
reqwest = { version = "0.12", features = [ "socks"] }
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-chrono", "with-json" ] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ] }
strum = "0.26"
strum_macros = "0.26"
tauri = { version = "2", features = [] }
tauri-plugin-log = { features = ["colored"] , version = "2" }
thiserror = "1.0"
tokio = "1.36.0"
tokio-stream = "0.1.15"
base64 = "0.22.1"
infer = "0.16.0"
sys-locale = "0.3.1"
sysinfo = "0.30.13"
secrecy = "0.8.0"
reqwest-eventsource = "0.6.0"
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[lib]
name = "kaas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
